A´ñádido de imagenes

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <div class="container">
                 <!-- Standard Edition -->
                 <div class="product-card">
-                    <img src="file:///home/chronos/u-a03c41a8bcd290ce42e7e20d4c8bb660d2f743c0/MyFiles/Downloads/DALL%C2%B7E%202024-11-20%2017.23.42%20-%20A%20futuristic%20device%20resembling%20a%20pistol%20named%20'Aqualoom%203000%20Standard%20Edition'.%20It%20has%20a%20simple%20and%20functional%20design%20with%20minimalistic%20metallic%20finis.webp" alt="Aqualoom 3000 Standard Edition">
+                    <img src="/images/model-standard.webp" alt="Aqualoom 3000 Standard Edition">
                     <h3>Standard Edition</h3>
                     <p>Less for more</p>
                     <p class="price">$199</p>
@@ -145,7 +145,7 @@
 
                 <!-- Plus Edition -->
                 <div class="product-card">
-                    <img src="file:///home/chronos/u-a03c41a8bcd290ce42e7e20d4c8bb660d2f743c0/MyFiles/Downloads/DALL%C2%B7E%202024-11-21%2009.07.02%20-%20A%20futuristic%20device%20resembling%20a%20pistol%20named%20'Aqualoom%203000%20Plus%20Edition'.%20The%20design%20is%20simple%20and%20functional,%20focusing%20on%20usability%20with%20basic%20meta.webp" alt="Aqualoom 3000 Plus Edition">
+                    <img src="/images/model-plus.webp" alt="Aqualoom 3000 Plus Edition">
                     <h3>Plus Edition</h3>
                     <p>The perfect balance</p>
                     <p class="price">$349</p>
@@ -154,7 +154,7 @@
 
                 <!-- Elite Edition -->
                 <div class="product-card">
-                    <img src="file:///home/chronos/u-a03c41a8bcd290ce42e7e20d4c8bb660d2f743c0/MyFiles/Downloads/DALL%C2%B7E%202024-11-20%2017.23.46%20-%20A%20premium%20futuristic%20device%20resembling%20a%20pistol%20named%20'Aqualoom%203000%20Elite'.%20It%20features%20a%20sleek%20metallic%20finish%20with%20a%20luxury%20aesthetic,%20enhanced%20erg.webp" alt="Aqualoom 3000 Elite Edition">
+                    <img src="/images/model-elite.webp" alt="Aqualoom 3000 Elite Edition">
                     <h3>Elite Edition</h3>
                     <p>Simply for a better world</p>
                     <p class="price">$449</p>
@@ -172,7 +172,7 @@
             <div class="container">
                 <!-- Standard Tube -->
                 <div class="product-card">
-                    <img src="file:///home/chronos/u-a03c41a8bcd290ce42e7e20d4c8bb660d2f743c0/MyFiles/Downloads/Screenshot%202024-11-21%2016.43.47.png" alt="Standard Tube">
+                    <img src="/images/tube-standard.png" alt="Standard Tube">
                     <h3>Standard Tube</h3>
                     <p>Compatible with Aqualoom 3000 Standard</p>
                     <p class="price">$29</p>
@@ -181,7 +181,7 @@
 
                 <!-- Plus Tube -->
                 <div class="product-card">
-                    <img src="file:///home/chronos/u-a03c41a8bcd290ce42e7e20d4c8bb660d2f743c0/MyFiles/Downloads/DALL%C2%B7E%202024-11-21%2016.38.24%20-%20A%20single,%20futuristic%20glass%20vial%20container%20designed%20to%20store%20liquids,%20featuring%20metallic%20caps%20on%20both%20ends.%20The%20vial%20is%20transparent%20with%20glowing%20blue%20l.webp" alt="Plus Tube">
+                    <img src="/images/tube-plus.webp" alt="Plus Tube">
                     <h3>Plus Tube</h3>
                     <p>Compatible with Aqualoom 3000 Plus</p>
                     <p class="price">$49</p>
@@ -190,7 +190,7 @@
 
                 <!-- Elite Green Tube -->
                 <div class="product-card">
-                    <img src="file:///home/chronos/u-a03c41a8bcd290ce42e7e20d4c8bb660d2f743c0/MyFiles/Downloads/DALL%C2%B7E%202024-11-21%2016.38.22%20-%20A%20futuristic%20glass%20vial%20container%20with%20a%20unique%20design,%20featuring%20glowing%20green%20liquid%20inside.%20The%20vial%20has%20metallic%20caps%20on%20both%20ends%20with%20engraved,%20.webp" alt="Elite Green Tube">
+                    <img src="/images/tube-green.webp" alt="Elite Green Tube">
                     <h3>Elite Tube - Green</h3>
                     <p>Premium model with RGB. Compatible with Aqualoom 3000 Elite</p>
                     <p class="price">$79</p>
@@ -199,7 +199,7 @@
 
                 <!-- Elite Red Tube -->
                 <div class="product-card">
-                    <img src="file:///home/chronos/u-a03c41a8bcd290ce42e7e20d4c8bb660d2f743c0/MyFiles/Downloads/DALL%C2%B7E%202024-11-21%2016.38.19%20-%20A%20futuristic%20glass%20vial%20container%20with%20a%20unique%20design,%20featuring%20glowing%20red%20liquid%20inside.%20The%20vial%20has%20metallic%20caps%20on%20both%20ends%20with%20engraved,%20in.webp" alt="Elite Red Tube">
+                    <img src="/images/tube-red.webp" alt="Elite Red Tube">
                     <h3>Elite Tube - Red</h3>
                     <p>Premium model with RGB. Compatible with Aqualoom 3000 Elite</p>
                     <p class="price">$79</p>
@@ -213,7 +213,7 @@
             <h2>Accessories</h2>
             <div class="container">
                 <div class="product-card">
-                    <img src="file:///home/chronos/u-a03c41a8bcd290ce42e7e20d4c8bb660d2f743c0/MyFiles/Downloads/DALL%C2%B7E%202024-11-21%2015.57.59%20-%20A%20rustic,%20minimalistic%20rounded%20case%20designed%20for%20the%20'Aqualoom%203000%20Elite%20Edition'.%20The%20case%20is%20entirely%20matte%20black%20with%20a%20plain,%20curved%20design%20and%20n.webp" alt="Aqualoom Elite Case">
+                    <img src="/images/cover.webp" alt="Aqualoom Elite Case">
                     <h3>Protective Case</h3>
                     <p>Durable and stylish, designed for the Elite Edition. Is compatible with all editions, but works better wit Aqualoom 3000 Elite.</p>
                     <p class="price">$79</p>
