fix link ghjosjhtyg

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <div class="container">
                 <!-- Standard Edition -->
                 <div class="product-card">
-                    <img src="/images/model-standard.webp" alt="Aqualoom 3000 Standard Edition">
+                    <img src="images/model-standard.webp" alt="Aqualoom 3000 Standard Edition">
                     <h3>Standard Edition</h3>
                     <p>Less for more</p>
                     <p class="price">$199</p>
@@ -145,7 +145,7 @@
 
                 <!-- Plus Edition -->
                 <div class="product-card">
-                    <img src="/images/model-plus.webp" alt="Aqualoom 3000 Plus Edition">
+                    <img src="images/model-plus.webp" alt="Aqualoom 3000 Plus Edition">
                     <h3>Plus Edition</h3>
                     <p>The perfect balance</p>
                     <p class="price">$349</p>
@@ -154,7 +154,7 @@
 
                 <!-- Elite Edition -->
                 <div class="product-card">
-                    <img src="/images/model-elite.webp" alt="Aqualoom 3000 Elite Edition">
+                    <img src="images/model-elite.webp" alt="Aqualoom 3000 Elite Edition">
                     <h3>Elite Edition</h3>
                     <p>Simply for a better world</p>
                     <p class="price">$449</p>
@@ -172,7 +172,7 @@
             <div class="container">
                 <!-- Standard Tube -->
                 <div class="product-card">
-                    <img src="/images/tube-standard.png" alt="Standard Tube">
+                    <img src="images/tube-standard.png" alt="Standard Tube">
                     <h3>Standard Tube</h3>
                     <p>Compatible with Aqualoom 3000 Standard</p>
                     <p class="price">$29</p>
@@ -181,7 +181,7 @@
 
                 <!-- Plus Tube -->
                 <div class="product-card">
-                    <img src="/images/tube-plus.webp" alt="Plus Tube">
+                    <img src="images/tube-plus.webp" alt="Plus Tube">
                     <h3>Plus Tube</h3>
                     <p>Compatible with Aqualoom 3000 Plus</p>
                     <p class="price">$49</p>
@@ -190,7 +190,7 @@
 
                 <!-- Elite Green Tube -->
                 <div class="product-card">
-                    <img src="/images/tube-green.webp" alt="Elite Green Tube">
+                    <img src="images/tube-green.webp" alt="Elite Green Tube">
                     <h3>Elite Tube - Green</h3>
                     <p>Premium model with RGB. Compatible with Aqualoom 3000 Elite</p>
                     <p class="price">$79</p>
@@ -199,7 +199,7 @@
 
                 <!-- Elite Red Tube -->
                 <div class="product-card">
-                    <img src="/images/tube-red.webp" alt="Elite Red Tube">
+                    <img src="images/tube-red.webp" alt="Elite Red Tube">
                     <h3>Elite Tube - Red</h3>
                     <p>Premium model with RGB. Compatible with Aqualoom 3000 Elite</p>
                     <p class="price">$79</p>
@@ -213,7 +213,7 @@
             <h2>Accessories</h2>
             <div class="container">
                 <div class="product-card">
-                    <img src="/images/cover.webp" alt="Aqualoom Elite Case">
+                    <img src="images/cover.webp" alt="Aqualoom Elite Case">
                     <h3>Protective Case</h3>
                     <p>Durable and stylish, designed for the Elite Edition. Is compatible with all editions, but works better wit Aqualoom 3000 Elite.</p>
                     <p class="price">$79</p>
